[package]
name = "utils"
version = "0.1.0"
edition = "2021"
authors = ["Dimas Tri Mustakim <tridims31@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
anyhow = "1.0.81"
coins-core = "0.8.7"
ctr = "0.9.2"
ethaddr = { version = "0.1", features = ["macros", "serde"] }
ethers = "2.0.14"
ethnum = { version = "1.5.0", features = ["serde"] }
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
k256 = "0.13.3"
pbkdf2 = "0.12.2"
rand = "0.8.5"
scrypt = "0.11.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
sha3 = "0.10.8"
unicode-normalization = "0.1.23"
