[package]
name = "account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
ethaddr = "0.2.2"
ethnum = "1.5.0"
hex = "0.4.3"
hex-literal = "0.4.1"
k256 = "0.13.3"
sha2 = "0.10.8"
sha3 = "0.10.8"
