[package]
name = "bip39"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
hex-literal = "0.4.1"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.115"
sha2 = "0.10.8"
sha3 = "0.10.8"
unicode-normalization = "0.1.23"
