[package]
name = "bip39"
version = "0.1.0"
edition = "2021"
authors = ["Dimas Tri Mustakim <tridims31@gmail.com>"]
description = "BIP39 implementation in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
anyhow = "1.0.81"
hex-literal = "0.4.1"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha2 = "0.10.8"
sha3 = "0.10.8"
unicode-normalization = "0.1.23"
