[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"
authors = ["Dimas Tri Mustakim <tridims31@gmail.com>"]
description = "Cryptography Utilities for My HDWallet Project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
aes = "0.8.4"
anyhow = "1.0.81"
ctr = "0.9.2"
scrypt = "0.11.0"
sha2 = "0.10.8"
hmac = "0.12.1"
hex-literal = "0.4.1"
